--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-certifi==2021.10.8
-charset-normalizer==2.0.10
-idna==3.3
+python-telegram-bot==13.9
 python-dotenv==0.19.2
-requests==2.27.1
-telegram==0.0.1
-urllib3==1.26.8
+requests==2.26.0
